fix: rename PackageDetail sidebar class to avoid global collapse rule collision

--- a/QuestionsHub.Blazor/Components/Pages/PackageDetail.razor.css
+++ b/QuestionsHub.Blazor/Components/Pages/PackageDetail.razor.css
@@ -6,7 +6,7 @@
 
 /* Responsive: hide tour navigation sidebar below lg breakpoint */
 @media (max-width: 991.98px) {
-    .sidebar {
+    .package-sidebar {
         display: none;
     }
 }
